--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SudokuApp</string>
+    <string name="textview_welcome">Welcome! Select an option to begin!</string>
+    <string name="button_manual">Manual</string>
+    <string name="button_scan">Scan</string>
 </resources>
